@@ -2,6 +2,13 @@
  *
  */
 
+2009-06-13 00:05 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  * src/wxbase/advctrls/wx_Grid.cpp
+  * src/wxbase/advctrls/wxhGrid.prg
+    + added methods:
+      + SelectCol
+      + SelectRow
+
 2009-06-12 13:20 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * include/wxHarbour/wxh.h
   * src/common/wx_harbour.cpp
